--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --ext js,ts,tsx .",
     "test": "jest",
     "build": "expo export --output-dir ./build --platform all",
+    "build:ios": "expo prebuild --clean --pnpm -p ios && expo run:ios",
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -15,10 +16,12 @@
     "eas-build-post-install": "pnpm run -w build:example"
   },
   "dependencies": {
-    "@acme/feature-home": "workspace:*",
+    "@babel/plugin-transform-react-jsx": "*",
+    "@babel/runtime": "^7.27.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "babel-preset-expo": "*",
     "expo": "~52.0.26",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
@@ -33,13 +36,15 @@
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native": "0.77.2",
+    "react-native-gesture-handler": "~2.22.1",
+    "react-native-ios-context-menu": "3.1.0",
+    "react-native-ios-utilities": "5.1.2",
+    "react-native-reanimated": "~3.16.7",
+    "react-native-safe-area-context": "5.1.0",
+    "react-native-screens": "~4.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@acme/eslint-config": "workspace:*",
@@ -73,5 +78,17 @@
   },
   "jest": {
     "preset": "jest-expo"
+  },
+  "expo": {
+    "install": {
+      "exclude": [
+        "react-native@~0.76.6",
+        "react-native-reanimated@~3.16.1",
+        "react-native-gesture-handler@~2.20.0",
+        "react-native-screens@~4.4.0",
+        "react-native-safe-area-context@~4.12.0",
+        "react-native-webview@~13.12.5"
+      ]
+    }
   }
 }
